--- a/eventos.html
+++ b/eventos.html
@@ -78,7 +78,7 @@
             
 
             <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="inicio.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
         </ul>
     </nav>
     <div class="textoeventos">
