--- a/exito.html
+++ b/exito.html
@@ -84,23 +84,13 @@
             <li><a href="">Inicio</a></li>
         </ul>
     </nav>
-    <div class="titulo">La Casa de Ernesto Sabato</div>
-
-
-
-    <div class="gridvideos">
-<li class="videoyoutube">
-    <iframe  src="https://www.youtube.com/embed/zRSGu1ixLnY" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></iframe>
-</li>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/YW5adLysNLQ" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0">  </iframe></li>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/SLNP369QE2s" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/3Zh3cIDcvuc" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/0vjmGbvg9wI" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/v8unX6JvaXA" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/as_cURm8neU" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
-<li class="videoyoutube"><iframe  src="https://www.youtube.com/embed/SLNP369QE2s" title="YouTube video player" frameborder="0" allow="accelerometer;  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel="0"></iframe></li>
+<div class="exito">
+    <li>
+    <H1> Nos comunicaremos a la brevedad, ¡muchas gracias!</H1>
+    </li>
 </div>
-<script src="script.js" type="text/javascript"></script>
-</body>
 
-</html>
+<script src="script.js" type="text/javascript"></script>
+    </body>
+
+    </html>
