--- a/eventos.html
+++ b/eventos.html
@@ -2,6 +2,7 @@
 
 <html lang="es">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Casa Museo Sabato">
@@ -13,72 +14,74 @@
 
 <body>
 
-
+    <nav id="nav" class="main-nav">
+        <div class="nav-links">
+          <a class="link-item" href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio">Reservar</a>
+          <a class="link-item" href="https://goo.gl/maps/GsVNLrzguBi7ZpK26">Llegar</a>
+          <a class="link-item" href="fotos.html">Media</a>
+          <a class="link-item" href="contacto.html">Contacto</a>
+          <a class="link-item" href="index.html">Inicio</a>
+        </div>
+      </nav>
+      <button id="button-menu" class="button-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
 
     <nav id="navegador">
-
         <ul class="menu">
-
-            <li class="casillareservar">
-                <a href="#">Reservar</a>
+            <li>
+                <a href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio">Reservar</a>
                 <ul class="submenu">
                     <div class="reservar">
                         <div class="textoreservar">
                             <h1>Las visitas son los días Sábados a las 15 horas solo reservando por wassap.Duran
                                 aproximádamente una hora y media.
                                 Para grupos o visitas especiales coordinar via wassap 11 3614 9927 o 11 6167 7626.</h1>
-                        </div>                
+                        </div>
                         <div class="telefono"> <img src="img/telefono.jpg" alt="telefono" loading="lazy"></div>
                         <div class="botonwassap">
                             <img class="btn-whatsapp" src="https://clientes.dongee.com/whatsapp.png" width="64"
                                 height="64" alt="Whatsapp"
                                 onclick="window.location.href='https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'">
-
                         </div>
                     </div>
-
-
                 </ul>
             </li>
-            <li class="casillasubmenu">
-                <a>Cómo llegar</a>
+            <li>
+                <a>Llegar
+                    <ul class="submenu">
+                        <div class="comollegar">
+                            <li class="textomapa">
+                                <h1>A solo 200 metros de la est. Santos Lugares,
+                                    colectivos 161 y 105.
+                                    A 800 metros de Gral. Paz
+                                </h1>
+                            </li>
+                            <li class="mapa">
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.060640139065!2d-58.540191384308294!3d-34.60262808045979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb7ecadf915bf%3A0xb5f74d0c51431f01!2sCasa%20Museo%20Ernesto%20S%C3%A1bato.!5e0!3m2!1ses!2sar!4v1659023684172!5m2!1ses!2sar"
+                                    width="600" height="400" style="border: 20px;" allowfullscreen="" loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-                <ul class="submenu">
-                    <div class="comollegar">
-                        <li class="textomapa">
-                            <h1>A solo 200 metros de la est. Santos Lugares,
-                                colectivos 161 y 105.
-                                A 800 metros de Gral. Paz
-                            </h1>
-                        </li>
-                        <li class="mapa">
-                             <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.060640139065!2d-58.540191384308294!3d-34.60262808045979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb7ecadf915bf%3A0xb5f74d0c51431f01!2sCasa%20Museo%20Ernesto%20S%C3%A1bato.!5e0!3m2!1ses!2sar!4v1659023684172!5m2!1ses!2sar"
-                                width="600" height="400" style="border: 20px;" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade"
-                                ></iframe>
-
-                        </li>
-                    </div>
-                </ul>
+                            </li>
+                        </div>
+                    </ul>
+                </a>
             </li>
-            <li class="CASILLASUBMENU"><a href="#">Media</a>
+            <li>
+                <a href="fotos.html">Media
                 <ul class="submenu">
                     <li><a href="videos.html">Videos</a> </li>
                     <li><a href="fotos.html">Fotos</a></li>
                     <li><a href="360.html">360</a></li>
                 </ul>
+            </a>
             </li>
-         
-
-
-
-            </div>
             <li><a href="eventos.html">Eventos</a></li>
-            
-
             <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="">Inicio</a></li>
         </ul>
     </nav>
     <div class="textoeventos">
@@ -106,6 +109,8 @@
 
 
     </div>
+
+    <script src="script.js" type="text/javascript"></script>
 
 
 
