--- a/contacto.html
+++ b/contacto.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Casa Museo Sabato">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="ernesto sabato, sabato, casa museo">
     <title>"Casa Museo Ernesto Sabato"</title>
     <link rel="stylesheet" href="style.css">
