--- a/exito.html
+++ b/exito.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Casa Museo Sabato">
     <meta name="keywords" content="ernesto sabato, sabato, casa museo">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>"Casa Museo Ernesto Sabato"</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
