--- a/360.html
+++ b/360.html
@@ -26,7 +26,7 @@
                         <div class="textoreservar">
                             <h1>Las visitas son los días Sábados a las 15 horas solo reservando por wassap.Duran
                                 aproximádamente una hora y media.
-                                Para grupos o visitas especiales coordinar via wassap 1136149927 o 1132762732.</h1>
+                                Para grupos o visitas especiales coordinar via wassap 11 3614 9927 o 11 6167-7626.</h1>
 
 
 
