--- a/fotos.html
+++ b/fotos.html
@@ -4,8 +4,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Casa Museo Sabato">
-    <meta name="keywords" content="ernesto sabato, sabato, casa museo">
+    <meta name="description" content="Visitas guiadas por sus nietos a la casona de santos lugares">
+    <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
     <title>"Casa Museo Ernesto Sabato"</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -46,10 +46,10 @@
                 <ul class="submenu">
                     <div class="comollegar">
                         <li class="textomapa">
-                            <h1>A solo 200 metros de la est. Santos Lugares,
+                            <h2>A solo 200 metros de la est. Santos Lugares,
                                 colectivos 161 y 105.
                                 A 800 metros de Gral. Paz
-                            </h1>
+                            </h2>
                         </li>
                         <li class="mapa">
                              <iframe
@@ -82,31 +82,31 @@
         </ul>
     </nav>
     <div class="paginafotos">
+    <li> <img src="img/ESCRITORIOTATA.jpg" alt="escritorio"></li>
+    <li> <img src="img/sabato-pasilloentrada.jpg" alt="pasillo entrada"></li>
+    <li> <img src="img/ATELIER1.jpg" alt="atelier soldi berni"></li>
+    <li> <img src="img/ESTUDIOPILECERES.jpg" alt="serie retratios sartre kafka "></li>
+    <li> <img src="img/TRADUCCIONES.jpg" alt="traducciones sabato"></li>
+    <li> <img src="img/PATIO.jpg" alt="patio casona santos lugares"></li>
+    <li> <img src="img/MURAL.jpg" alt="mural martin ron"></li>
+    <li> <img src="img/cartel-casade-grande.jpg" alt="sabato 3135"></li>
+    <li> <img src="img/estudiopileestatua.jpg" alt="estatua de ceres parque lezama"></li>
+    <li> <img src="img/Estudio pile sillones.jpg" alt="estudio pile"></li>
+    <li> <img src="img/ATELIERAFUERA.jpg" alt="atelier soldi berni"></li>
+    <li> <img src="img/ATELIER5.jpg" alt="atelier elena wolf"></li>
+    <li> <img src="img/ATELIERTATACUADROS.jpg" alt="expresionismo sartre"></li>
+    <li> <img src="img/FACHADACARTEL.jpg" alt="casa de sabato"></li>
+    <li> <img src="img/reloj-cucu.jpg" alt="reloj cucu"></li>
+    <li> <img src="img/BIBLIOETCA3.jpg" alt="biblioteca"></li>
+    <li> <img src="img/CASAILUMINADA (2).jpg" alt="casa iluminada"></li>
     <li> <img src="img/ESCRITORIOTATA.jpg" alt=""></li>
-    <li> <img src="img/sabato-pasilloentrada.jpg" alt=""></li>
-    <li> <img src="img/ATELIER1.jpg" alt=""></li>
-    <li> <img src="img/ESTUDIOPILECERES.jpg" alt=""></li>
-    <li> <img src="img/TRADUCCIONES.jpg" alt=""></li>
-    <li> <img src="img/PATIO.jpg" alt=""></li>
-    <li> <img src="img/MURAL.jpg" alt=""></li>
-    <li> <img src="img/cartel-casade-grande.jpg" alt=""></li>
-    <li> <img src="img/estudiopileestatua.jpg" alt=""></li>
-    <li> <img src="img/Estudio pile sillones.jpg" alt=""></li>
-    <li> <img src="img/ATELIERAFUERA.jpg" alt=""></li>
-    <li> <img src="img/ATELIER5.jpg" alt=""></li>
-    <li> <img src="img/ATELIERTATACUADROS.jpg" alt=""></li>
-    <li> <img src="img/FACHADACARTEL.jpg" alt=""></li>
-    <li> <img src="img/reloj-cucu.jpg" alt=""></li>
-    <li> <img src="img/BIBLIOETCA3.jpg" alt=""></li>
-    <li> <img src="img/CASAILUMINADA (2).jpg" alt=""></li>
-    <li> <img src="img/ESCRITORIOTATA.jpg" alt=""></li>
-    <li> <img src="img/estudiopileestatua.jpg" alt=""></li>
-    <li> <img src="img/ESTUDIOPILEPENUMBRA.jpg" alt=""></li>
-    <li> <img src="img/ATELIERTATACUADROS.jpg" alt=""></li>
-    <li> <img src="img/Casa Museo Ernesto Sábato.jpg" alt=""></li>
-    <li> <img src="img/FACHADA.jpg" alt=""></li>
-    <li> <img src="img/Ernesto.biblioteca.jpg" alt=""></li>
-    <li> <img src="img/Ernesto-Sábato-2.jpg (2).jpg" alt=""></li>
+    <li> <img src="img/estudiopileestatua.jpg" alt="estatua ceres diosa agricultura"></li>
+    <li> <img src="img/ESTUDIOPILEPENUMBRA.jpg" alt="estudio penunbra"></li>
+    <li> <img src="img/ATELIERTATACUADROS.jpg" alt="sartre existencialismo surrealismo"></li>
+    <li> <img src="img/Casa Museo Ernesto Sábato.jpg" alt="casa sabato2"></li>
+    <li> <img src="img/FACHADA.jpg" alt="fachada"></li>
+    <li> <img src="img/Ernesto.biblioteca.jpg" alt="biblioteca"></li>
+    <li> <img src="img/Ernesto-Sábato-2.jpg (2).jpg" alt="ernesto sabato"></li>
  </div>
 
 
