--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Casa Museo Sabato">
-    <meta name="keywords" content="ernesto sabato, sabato, casa museo">
+    <meta name="description" content="Visitas guiadas por sus nietos a la casona de santos lugares">
+    <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
     <title>"Casa Museo Ernesto Sabato"</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -46,10 +46,10 @@
                 <ul class="submenu">
                     <div class="comollegar">
                         <li class="textomapa">
-                            <h1>A solo 200 metros de la est. Santos Lugares,
+                            <h2>A solo 200 metros de la est. Santos Lugares,
                                 colectivos 161 y 105.
                                 A 800 metros de Gral. Paz
-                            </h1>
+                            </h2>
                         </li>
                         <li class="mapa">
                              <iframe
@@ -99,17 +99,17 @@
 </div>
 
     <div class="contenedor-cabecera">
-        <li> <img class="sabato" src="img/sabato-santoslugares.jpg" alt="SABATO ESTACION"></li>
+        <li> <img class="sabato" src="img/sabato-santoslugares.jpg" alt="SABATO ESTACION santos lugares"></li>
         <li class="firma">
             <img src="img/Firma-sabato.jpg" alt="firma sabato">
 
         </li>
-        <li> <img src="img/casailuminada.jpg" alt="CASAILUMINADA"></li>
+        <li> <img src="img/casailuminada.jpg" alt="CASAto 3135"></li>
 
 
     </div>
-    <h1 class="nietos">Un viaje a través del tiempo y la vida del escritor, guiado por sus nietos, todos los sábados a
-        las 15 horas.</h1>
+    <h2 class="nietos">Un viaje a través del tiempo y la vida del escritor, guiado por sus nietos, todos los sábados a
+        las 15 horas.</h2>
 
 
 
@@ -117,9 +117,9 @@
     <div class="slide-fotos">
         <ul class="contenedor-fotos">
 
-            <li> <img class="foto-cabecera" src="img/atelier-recortada.jpg" alt="foto casa museo"></li>
-            <li> <img class="foto-cabecera" src="img/biblioteca-recortada.jpg" alt="foto casa museo"></li>
-            <li> <img class="foto-cabecera" src="img/Oficina-recortada.jpg" alt="foto casa museo"></li>
+            <li> <img class="foto-cabecera" src="img/atelier-recortada.jpg" alt="atelier soldi berni"></li>
+            <li> <img class="foto-cabecera" src="img/biblioteca-recortada.jpg" alt="biblioteca matilde kuminsky"></li>
+            <li> <img class="foto-cabecera" src="img/Oficina-recortada.jpg" alt="oficina ernesto"></li>
 
         </ul>
     </div>
@@ -139,40 +139,40 @@
 
     <div class="grid">
         <div class="fotogaleria1">
-            <img src="img/fotos   normalizadas/fotonormalizada (1).jpg" alt="1">
+            <img src="img/fotos   normalizadas/fotonormalizada (1).jpg" alt="estudio matilde">
         </div>
         <div class="fotogaleria2">
-            <img src="img/fotos   normalizadas/fotonormalizada (2).jpg" alt="2">
+            <img src="img/fotos   normalizadas/fotonormalizada (2).jpg" alt="casona sobre heroes y tumbas">
         </div>
         <div class="fotogaleria3">
-            <img src="img/fotos   normalizadas/fotonormalizada (3).jpg" alt="3">
+            <img src="img/fotos   normalizadas/fotonormalizada (3).jpg" alt="traducciones">
         </div>
         <div class="fotogaleria4">
-            <img src="img/fotos   normalizadas/fotonormalizada (4).jpg" alt="4">
+            <img src="img/fotos   normalizadas/fotonormalizada (4).jpg" alt="maquinaescribir">
         </div>
         <div class="fotogaleria5">
-            <img src="img/fotos   normalizadas/fotonormalizada (5).jpg" alt="5">
+            <img src="img/fotos   normalizadas/fotonormalizada (5).jpg" alt="jaime torres charango reyes de españa premio cervantes">
         </div>
         <div class="fotogaleria6">
-            <img src="img/fotos   normalizadas/fotonormalizada (6).jpg" alt="6">
+            <img src="img/fotos   normalizadas/fotonormalizada (6).jpg" alt="clasicos latinoamericanos">
         </div>
         <div class="fotogaleria7">
-            <img src="img/fotos   normalizadas/fotonormalizada (7).jpg" alt="7">
+            <img src="img/fotos   normalizadas/fotonormalizada (7).jpg" alt="pinturas expresionismo sartre">
         </div>
         <div class="fotogaleria8">
-            <img src="img/fotos   normalizadas/fotonormalizada (8).jpg" alt="8">
+            <img src="img/fotos   normalizadas/fotonormalizada (8).jpg" alt="ernesto sabato penunmbra">
         </div>
         <div class="fotogaleria8">
-            <img src="img/fotos   normalizadas/fotonormalizada (9).jpg" alt="8">
+            <img src="img/fotos   normalizadas/fotonormalizada (9).jpg" alt="patio araucaria tango">
         </div>
         <div class="fotogaleria8">
-            <img src="img/fotos   normalizadas/fotonormalizada (10).jpg" alt="8">
+            <img src="img/fotos   normalizadas/fotonormalizada (10).jpg" alt="estudio pile federico valle cine">
         </div>
         <div class="fotogaleria8">
-            <img src="img/fotos   normalizadas/fotonormalizada (11).jpg" alt="8">
+            <img src="img/fotos   normalizadas/fotonormalizada (11).jpg" alt="maquina escribir sabato olivetti">
         </div>
         <div class="fotogaleria8">
-            <img src="img/fotos   normalizadas/fotonormalizada (12).jpg" alt="8">
+            <img src="img/fotos   normalizadas/fotonormalizada (12).jpg" alt="pinturas Friedrich Nietzsche">
         </div>
 
     </div>
