--- a/videos.html
+++ b/videos.html
@@ -4,8 +4,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Casa Museo Sabato">
-    <meta name="keywords" content="ernesto sabato, sabato, casa museo">
+    <meta name="description" content="Visitas guiadas por sus nietos a la casona de santos lugares">
+    <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
     <title>"Casa Museo Ernesto Sabato"</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -26,35 +26,30 @@
                         <div class="textoreservar">
                             <h1>Las visitas son los días Sábados a las 15 horas solo reservando por wassap.Duran
                                 aproximádamente una hora y media.
-                                Para grupos o visitas especiales coordinar via wassap 1136149927 o 1132762732.</h1>
-
-
-
-                        </div>
+                                Para grupos o visitas especiales coordinar via wassap 11 3614 9927 o 11 6167 7626.</h1>
+                        </div>                
+                        <div class="telefono"> <img src="img/telefono.jpg" alt="telefono" loading="lazy"></div>
                         <div class="botonwassap">
                             <img class="btn-whatsapp" src="https://clientes.dongee.com/whatsapp.png" width="64"
                                 height="64" alt="Whatsapp"
                                 onclick="window.location.href='https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'">
 
                         </div>
-
-                        <div class="telefono"> <img src="img/telefono.jpg" alt="telefono" loading="lazy"></div>
-
                     </div>
 
 
                 </ul>
             </li>
             <li class="casillasubmenu">
-                <a>Cómo llegar </a>
+                <a>Cómo llegar</a>
 
                 <ul class="submenu">
                     <div class="comollegar">
                         <li class="textomapa">
-                            <h1>A solo 200 metros de la est. Santos Lugares,
+                            <h2>A solo 200 metros de la est. Santos Lugares,
                                 colectivos 161 y 105.
                                 A 800 metros de Gral. Paz
-                            </h1>
+                            </h2>
                         </li>
                         <li class="mapa">
                              <iframe
@@ -69,9 +64,9 @@
             </li>
             <li class="CASILLASUBMENU"><a href="#">Media</a>
                 <ul class="submenu">
-                    <li><a href="videos.html"> Videos</a> </li>
-                    <li><a href="fotos.html"> Fotos</a></li>
-                    <li><a href="360.html"> 360</a></li>
+                    <li><a href="videos.html">Videos</a> </li>
+                    <li><a href="fotos.html">Fotos</a></li>
+                    <li><a href="360.html">360</a></li>
                 </ul>
             </li>
          
@@ -83,7 +78,7 @@
             
 
             <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="inicio.html">Inicio</a></li>
         </ul>
     </nav>
     <div class="titulo">La Casa de Ernesto Sabato</div>
