--- a/eventos.html
+++ b/eventos.html
@@ -85,7 +85,7 @@
         <H2> La casa realiza eventos en los patios y jardines de la casa, para darle lugar a artistas emergentes y a
             artistas consagrados.</H2>
     </div>
-    <div class="grid">git c
+    <div class="grid">
 
         <img src="img/eventos/actores.jpg" alt="actores el tunel">
         <img src="img/eventos/luciana 1.jpg" alt="luciana">
