--- a/360.html
+++ b/360.html
@@ -81,7 +81,7 @@
             </li>
             <li><a href="eventos.html">Eventos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
         </ul>
     </nav>
 <div>
