--- a/videos.html
+++ b/videos.html
@@ -4,6 +4,15 @@
 
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LE6VKZR6N8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LE6VKZR6N8');
+</script>
     <meta charset="UTF-8">
     <meta name="description" content="Visitas guiadas por sus nietos a la casona de santos lugares">
     <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
