--- a/exito.html
+++ b/exito.html
@@ -2,11 +2,19 @@
 
 <html lang="es">
 
-
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LE6VKZR6N8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LE6VKZR6N8');
+</script>
     <meta charset="UTF-8">
-    <meta name="description" content="Casa Museo Sabato">
-    <meta name="keywords" content="ernesto sabato, sabato, casa museo">
+    <meta name="description" content="Visitas guiadas por sus nietos a la casona de santos lugares">
+    <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>"Casa Museo Ernesto Sabato"</title>
     <link rel="stylesheet" href="style.css">
@@ -21,7 +29,6 @@
           <a class="link-item" href="https://goo.gl/maps/GsVNLrzguBi7ZpK26">Llegar</a>
           <a class="link-item" href="fotos.html">Media</a>
           <a class="link-item" href="contacto.html">Contacto</a>
-          <a class="link-item" href="index.html">Inicio</a>
         </div>
       </nav>
       <button id="button-menu" class="button-menu">
@@ -50,26 +57,27 @@
                     </div>
                 </ul>
             </li>
-            <li>
-                <a>Llegar
-                    <ul class="submenu">
-                        <div class="comollegar">
-                            <li class="textomapa">
-                                <h1>A solo 200 metros de la est. Santos Lugares,
-                                    colectivos 161 y 105.
-                                    A 800 metros de Gral. Paz
-                                </h1>
-                            </li>
-                            <li class="mapa">
-                                <iframe
-                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.060640139065!2d-58.540191384308294!3d-34.60262808045979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb7ecadf915bf%3A0xb5f74d0c51431f01!2sCasa%20Museo%20Ernesto%20S%C3%A1bato.!5e0!3m2!1ses!2sar!4v1659023684172!5m2!1ses!2sar"
-                                    width="600" height="400" style="border: 20px;" allowfullscreen="" loading="lazy"
-                                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <li class="casillasubmenu">
+                <a>Cómo llegar</a>
 
-                            </li>
-                        </div>
-                    </ul>
-                </a>
+                <ul class="submenu">
+                    <div class="comollegar">
+                        <li class="textomapa">
+                            <h2>A solo 200 metros de la est. Santos Lugares,
+                                colectivos 161 y 105.
+                                A 800 metros de Gral. Paz
+                            </h2>
+                        </li>
+                        <li class="mapa">
+                             <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.060640139065!2d-58.540191384308294!3d-34.60262808045979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb7ecadf915bf%3A0xb5f74d0c51431f01!2sCasa%20Museo%20Ernesto%20S%C3%A1bato.!5e0!3m2!1ses!2sar!4v1659023684172!5m2!1ses!2sar"
+                                width="600" height="400" style="border: 20px;" allowfullscreen="" loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"
+                                ></iframe>
+
+                        </li>
+                    </div>
+                </ul>
             </li>
             <li>
                 <a href="fotos.html">Media
