--- a/360.html
+++ b/360.html
@@ -3,7 +3,15 @@
 <html lang="es">
 
 <head>
-    <!-- Google tag (gtag.js) -->
+
+    <meta charset="UTF-8">
+    <meta name="description" content="Visitas guiadas por sus nietos a la casona de santos lugares">
+    <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>"Casa Museo Ernesto Sabato"</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+        <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LE6VKZR6N8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -12,13 +20,6 @@
 
   gtag('config', 'G-LE6VKZR6N8');
 </script>
-    <meta charset="UTF-8">
-    <meta name="description" content="Visitas guiadas por sus nietos a la casona de santos lugares">
-    <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"Casa Museo Ernesto Sabato"</title>
-    <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -29,7 +30,6 @@
           <a class="link-item" href="https://goo.gl/maps/GsVNLrzguBi7ZpK26">Llegar</a>
           <a class="link-item" href="fotos.html">Media</a>
           <a class="link-item" href="contacto.html">Contacto</a>
-          <a class="link-item" href="index.html">Inicio</a>
         </div>
       </nav>
       <button id="button-menu" class="button-menu">
@@ -80,7 +80,8 @@
                     </div>
                 </ul>
             </li>
-            <li class="CASILLASUBMENU"><a href="#">Media</a>
+            <li>
+                <a href="fotos.html">Media
                 <ul class="submenu">
                     <li><a href="videos.html">Videos</a> </li>
                     <li><a href="fotos.html">Fotos</a></li>
@@ -90,7 +91,7 @@
             </li>
             <li><a href="eventos.html">Eventos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="">Inicio</a></li>
         </ul>
     </nav>
 <div>
