--- a/eventos.html
+++ b/eventos.html
@@ -3,7 +3,15 @@
 <html lang="es">
 
 <head>
-    <!-- Google tag (gtag.js) -->
+
+    <meta charset="UTF-8">
+    <meta name="description" content="Visitas guiadas por sus nietos a la casona de santos lugares">
+    <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>"Casa Museo Ernesto Sabato"</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+        <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LE6VKZR6N8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -12,41 +20,42 @@
 
   gtag('config', 'G-LE6VKZR6N8');
 </script>
-    <meta charset="UTF-8">
-    <meta name="description" content="Visitas guiadas por sus nietos a la casona de santos lugares">
-    <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
-    <title>"Casa Museo Ernesto Sabato"</title>
-    <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
 
-
+    <nav id="nav" class="main-nav">
+        <div class="nav-links">
+          <a class="link-item" href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio">Reservar</a>
+          <a class="link-item" href="https://goo.gl/maps/GsVNLrzguBi7ZpK26">Llegar</a>
+          <a class="link-item" href="fotos.html">Media</a>
+          <a class="link-item" href="contacto.html">Contacto</a>
+        </div>
+      </nav>
+      <button id="button-menu" class="button-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+      </button>
 
     <nav id="navegador">
-
         <ul class="menu">
-
-            <li class="casillareservar">
-                <a href="#">Reservar</a>
+            <li>
+                <a href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio">Reservar</a>
                 <ul class="submenu">
                     <div class="reservar">
                         <div class="textoreservar">
                             <h1>Las visitas son los días Sábados a las 15 horas solo reservando por wassap.Duran
                                 aproximádamente una hora y media.
                                 Para grupos o visitas especiales coordinar via wassap 11 3614 9927 o 11 6167 7626.</h1>
-                        </div>                
+                        </div>
                         <div class="telefono"> <img src="img/telefono.jpg" alt="telefono" loading="lazy"></div>
                         <div class="botonwassap">
                             <img class="btn-whatsapp" src="https://clientes.dongee.com/whatsapp.png" width="64"
                                 height="64" alt="Whatsapp"
                                 onclick="window.location.href='https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'">
-
                         </div>
                     </div>
-
-
                 </ul>
             </li>
             <li class="casillasubmenu">
@@ -71,23 +80,18 @@
                     </div>
                 </ul>
             </li>
-            <li class="CASILLASUBMENU"><a href="#">Media</a>
+            <li>
+                <a href="fotos.html">Media
                 <ul class="submenu">
                     <li><a href="videos.html">Videos</a> </li>
                     <li><a href="fotos.html">Fotos</a></li>
                     <li><a href="360.html">360</a></li>
                 </ul>
+            </a>
             </li>
-         
-
-
-
-            </div>
             <li><a href="eventos.html">Eventos</a></li>
-            
-
             <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="">Inicio</a></li>
         </ul>
     </nav>
     <div class="textoeventos">
