--- a/exito.html
+++ b/exito.html
@@ -3,7 +3,15 @@
 <html lang="es">
 
 <head>
-    <!-- Google tag (gtag.js) -->
+
+    <meta charset="UTF-8">
+    <meta name="description" content="Visitas guiadas por sus nietos a la casona de santos lugares">
+    <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Casa Museo Ernesto Sabato</title>
+    <link rel="stylesheet" href="style.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+        <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LE6VKZR6N8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -12,13 +20,6 @@
 
   gtag('config', 'G-LE6VKZR6N8');
 </script>
-    <meta charset="UTF-8">
-    <meta name="description" content="Visitas guiadas por sus nietos a la casona de santos lugares">
-    <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"Casa Museo Ernesto Sabato"</title>
-    <link rel="stylesheet" href="style.css">
-    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -93,6 +94,7 @@
             <li><a href="">Inicio</a></li>
         </ul>
     </nav>
+
 <div class="exito">
     <li>
     <H1> Nos comunicaremos a la brevedad, ¡muchas gracias!</H1>
