--- a/fotos.html
+++ b/fotos.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Visitas guiadas por sus nietos a la casona de santos lugares">
     <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"Casa Museo Ernesto Sabato"</title>
+    <title>Casa Museo Ernesto Sabato</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
         <!-- Google tag (gtag.js) -->
@@ -94,6 +94,7 @@
             <li><a href="">Inicio</a></li>
         </ul>
     </nav>
+
     <div class="paginafotos">
     <li> <img src="img/ESCRITORIOTATA.jpg" alt="escritorio"></li>
     <li> <img src="img/sabato-pasilloentrada.jpg" alt="pasillo entrada"></li>
