--- a/exito.html
+++ b/exito.html
@@ -91,7 +91,7 @@
             </li>
             <li><a href="eventos.html">Eventos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
         </ul>
     </nav>
 
