--- a/videos.html
+++ b/videos.html
@@ -5,10 +5,10 @@
 <head>
 
     <meta charset="UTF-8">
-    <meta name="description" content="Visitas guiadas por sus nietos a la casona de santos lugares">
+    <meta name="description" content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumabas en santos lugares ">
     <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casa Museo Ernesto Sabato</title>
+    <title>Casa Museo Ernesto Sabato visitas guiadas por sus nietos, rerervar acá</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
         <!-- Google tag (gtag.js) -->
@@ -45,9 +45,9 @@
                 <ul class="submenu">
                     <div class="reservar">
                         <div class="textoreservar">
-                            <h1>Las visitas son los días Sábados a las 15 horas solo reservando por wassap.Duran
+                            <h2>Las visitas son los días Sábados a las 15 horas solo reservando por wassap.Duran
                                 aproximádamente una hora y media.
-                                Para grupos o visitas especiales coordinar via wassap 11 3614 9927 o 11 6167 7626.</h1>
+                                Para grupos o visitas especiales coordinar via wassap 11 3614 9927 o 11 6167 7626.</h2>
                         </div>
                         <div class="telefono"> <img src="img/telefono.jpg" alt="telefono" loading="lazy"></div>
                         <div class="botonwassap">
