--- a/360.html
+++ b/360.html
@@ -5,10 +5,10 @@
 <head>
 
     <meta charset="UTF-8">
-    <meta name="description" content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumabas en santos lugares ">
+    <meta name="description" content="Visitas guiadas por sus nietos a la casona en santos lugares sabados 15 horas">
     <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casa Museo Ernesto Sabato visitas guiadas por sus nietos, rerervar acá</title>
+    <title>Casa Museo Ernesto Sabato visitas guiadas por sus nietos, reservar acá</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
         <!-- Google tag (gtag.js) -->
