--- a/fotos.html
+++ b/fotos.html
@@ -95,6 +95,8 @@
         </ul>
     </nav>
 
+    <div class="titulo"> <h1>La Casa Museo de Ernesto Sabato</h1></div>
+
     <div class="paginafotos">
     <li> <img src="img/ESCRITORIOTATA.jpg" alt="escritorio"></li>
     <li> <img src="img/sabato-pasilloentrada.jpg" alt="pasillo entrada"></li>
