--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </ul>
     </nav>
 
-    <div class="titulo">La Casa de Ernesto Sabato</div>
+    <div class="titulo"> <h1>La Casa Museo de Ernesto Sabato</h1></div>
 
     <div class="iconoscontainer">
         <a href="" class="facebook">
