--- a/360.html
+++ b/360.html
@@ -5,10 +5,10 @@
 <head>
 
     <meta charset="UTF-8">
-    <meta name="description" content="Visitas guiadas por sus nietos a la casona en santos lugares sabados 15 horas">
+    <meta name="description" content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumabas en santos lugares ">
     <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casa Museo Ernesto Sabato visitas guiadas por sus nietos, reservar acá</title>
+    <title>Casa Museo Ernesto Sabato visitas guiadas por sus nietos, rerervar acá</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
         <!-- Google tag (gtag.js) -->
@@ -43,7 +43,7 @@
             <li>
                 <a href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio">Reservar</a>
                 <ul class="submenu">
-                    <div class="reservar">
+                    <li class="reservar">
                         <div class="textoreservar">
                             <h2>Las visitas son los días Sábados a las 15 horas solo reservando por wassap.Duran
                                 aproximádamente una hora y media.
@@ -55,14 +55,14 @@
                                 height="64" alt="Whatsapp"
                                 onclick="window.location.href='https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'">
                         </div>
-                    </div>
+                    </li>
                 </ul>
             </li>
             <li class="casillasubmenu">
                 <a>Cómo llegar</a>
 
                 <ul class="submenu">
-                    <div class="comollegar">
+                    <li class="comollegar">
                         <li class="textomapa">
                             <h2>A solo 200 metros de la est. Santos Lugares,
                                 colectivos 161 y 105.
@@ -77,7 +77,7 @@
                                 ></iframe>
 
                         </li>
-                    </div>
+                    </li>
                 </ul>
             </li>
             <li>
@@ -91,10 +91,11 @@
             </li>
             <li><a href="eventos.html">Eventos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
         </ul>
     </nav>
 
+    <div class="titulo"> <h1>La Casa Museo de Ernesto Sabato</h1></div>
 <div>
     <li class="video-responsive2"><iframe width="960" color="3" height="600" src="https://www.youtube.com/embed/as_cURm8neU" title="YouTube video player" frameborder="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen rel=0></iframe></li>
 
