--- a/fotos.html
+++ b/fotos.html
@@ -43,7 +43,7 @@
             <li>
                 <a href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio">Reservar</a>
                 <ul class="submenu">
-                    <div class="reservar">
+                    <li class="reservar">
                         <div class="textoreservar">
                             <h2>Las visitas son los días Sábados a las 15 horas solo reservando por wassap.Duran
                                 aproximádamente una hora y media.
@@ -55,14 +55,14 @@
                                 height="64" alt="Whatsapp"
                                 onclick="window.location.href='https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'">
                         </div>
-                    </div>
+                    </li>
                 </ul>
             </li>
             <li class="casillasubmenu">
                 <a>Cómo llegar</a>
 
                 <ul class="submenu">
-                    <div class="comollegar">
+                    <li class="comollegar">
                         <li class="textomapa">
                             <h2>A solo 200 metros de la est. Santos Lugares,
                                 colectivos 161 y 105.
@@ -77,7 +77,7 @@
                                 ></iframe>
 
                         </li>
-                    </div>
+                    </li>
                 </ul>
             </li>
             <li>
@@ -91,12 +91,11 @@
             </li>
             <li><a href="eventos.html">Eventos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
         </ul>
     </nav>
 
     <div class="titulo"> <h1>La Casa Museo de Ernesto Sabato</h1></div>
-
     <div class="paginafotos">
     <li> <img src="img/ESCRITORIOTATA.jpg" alt="escritorio"></li>
     <li> <img src="img/sabato-pasilloentrada.jpg" alt="pasillo entrada"></li>
