--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 <head>
 
     <meta charset="UTF-8">
-    <meta name="description" content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumabas en santos lugares ">
+    <meta name="description" content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumbas en santos lugares ">
     <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="enkg"/>
+
+    <meta name="copyright" content="Propietario del copyright" />
     <title>Casa Museo Ernesto Sabato visitas guiadas por sus nietos, rerervar acá</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -97,28 +100,15 @@
 
     <div class="titulo"> <h1>La Casa Museo de Ernesto Sabato</h1></div>
 
-    <div class="iconoscontainer">
-        <a href="" class="facebook">
-            <i class="fab fa-facebook"></i>
-        </a>
-        <a href="" class="instagram">
-            <i class="fab fa-instagram"></i>
-        </a>
-        <a href="" class="google">
-            <i class="fab fa-google"></i>
-        </a>
-        <a href="" class="tripadvisor">
-            <i class="fab fa-tripadvisor"></i>
-        </a>
-    </div>
+ 
 
     <div class="contenedor-cabecera">
         <li> <img class="sabato" src="img/sabato-santoslugares.jpg" alt="SABATO ESTACION santos lugares"></li>
         <li class="firma">
-            <img src="img/Firma-sabato.jpg" alt="firma sabato">
+            <img src="img/Firma-sabato.jpg" alt="firmasabato">
 
         </li>
-        <li> <img src="img/casailuminada.jpg" alt="CASAto 3135"></li>
+        <li> <img src="img/casailuminada.jpg" alt="sabato3135"></li>
 
 
     </div>
@@ -131,9 +121,9 @@
     <div class="slide-fotos">
         <ul class="contenedor-fotos">
 
-            <li> <img class="foto-cabecera" src="img/atelier-recortada.jpg" alt="atelier soldi berni"></li>
-            <li> <img class="foto-cabecera" src="img/biblioteca-recortada.jpg" alt="biblioteca matilde kuminsky"></li>
-            <li> <img class="foto-cabecera" src="img/Oficina-recortada.jpg" alt="oficina ernesto"></li>
+            <li> <img class="foto-cabecera" src="img/atelier-recortada.jpg" alt="atelier-soldi-berni"></li>
+            <li> <img class="foto-cabecera" src="img/biblioteca-recortada.jpg" alt="biblioteca-matilde-kuminsky"></li>
+            <li> <img class="foto-cabecera" src="img/Oficina-recortada.jpg" alt="oficina-ernesto"></li>
 
         </ul>
     </div>
@@ -143,8 +133,8 @@
 
         <video controls autoplay muted loop>
 
-            <source src="Casa de Sabato.mp4" type="video/mp4">
-            <source src="Casa de Sabato.ogg" type="video/ogg">
+            <source src="Casa de Sabato.mp4" alt="video-institucional" type="video/mp4">
+            <source src="Casa de Sabato.ogg" alt="video-casadesabato" type="video/ogg">
             Formato de vídeo no soportado.
         </video>
 
@@ -153,28 +143,28 @@
 
     <div class="grid">
         <div class="fotogaleria1">
-            <img src="img/fotos   normalizadas/fotonormalizada (1).jpg" alt="estudio matilde">
+            <img src="img/fotos-normalizadas/fotonormalizada (1).jpg" alt="estudio matilde">
         </div>
         <div class="fotogaleria2">
-            <img src="img/fotos   normalizadas/fotonormalizada (2).jpg" alt="casona sobre heroes y tumbas" loading = "lazy">
+            <img src="img/fotos-normalizadas/fotonormalizada (2).jpg" alt="casona sobre heroes y tumbas" loading = "lazy">
         </div>
         <div class="fotogaleria3">
-            <img src="img/fotos   normalizadas/fotonormalizada (3).jpg" alt="traducciones" loading = "lazy">
+            <img src="img/fotos-normalizadas/fotonormalizada (3).jpg" alt="traducciones" loading = "lazy">
         </div>
         <div class="fotogaleria4">
-            <img src="img/fotos   normalizadas/fotonormalizada (4).jpg" alt="maquinaescribir" loading = "lazy">
+            <img src="img/fotos-normalizadas/fotonormalizada (4).jpg" alt="maquinaescribir" loading = "lazy">
         </div>
         <div class="fotogaleria5">
-            <img src="img/fotos   normalizadas/fotonormalizada (5).jpg" alt="jaime torres charango reyes de españa premio cervantes" loading = "lazy">
+            <img src="img/fotos-normalizadas/fotonormalizada (5).jpg" alt="jaime torres charango reyes de españa premio cervantes" loading = "lazy">
         </div>
         <div class="fotogaleria6">
-            <img src="img/fotos   normalizadas/fotonormalizada (6).jpg" alt="clasicos latinoamericanos" loading = "lazy">
+            <img src="img/fotos-normalizadas/fotonormalizada (6).jpg" alt="clasicos latinoamericanos" loading = "lazy">
         </div>
         <div class="fotogaleria7">
-            <img src="img/fotos   normalizadas/fotonormalizada (7).jpg" alt="pinturas expresionismo sartre" loading = "lazy">
+            <img src="img/fotos-normalizadas/fotonormalizada (7).jpg" alt="pinturas expresionismo sartre" loading = "lazy">
         </div>
         <div class="fotogaleria8">
-            <img src="img/fotos   normalizadas/fotonormalizada (8).jpg" alt="ernesto sabato penunmbra">
+            <img src="img/fotos-normalizadas/fotonormalizada (8).jpg" alt="ernesto sabato penunmbra">
         </div>
         <div class="fotogaleria8">
             <img src="img/fotos   normalizadas/fotonormalizada (9).jpg" alt="patio araucaria tango">
