--- a/exito.html
+++ b/exito.html
@@ -5,9 +5,12 @@
 <head>
 
     <meta charset="UTF-8">
-    <meta name="description" content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumabas en santos lugares ">
+    <meta name="description" content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumbas en santos lugares ">
     <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="enkg"/>
+
+    <meta name="copyright" content="Propietario del copyright" />
     <title>Casa Museo Ernesto Sabato visitas guiadas por sus nietos, rerervar acá</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -43,7 +46,7 @@
             <li>
                 <a href="https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio">Reservar</a>
                 <ul class="submenu">
-                    <div class="reservar">
+                    <li class="reservar">
                         <div class="textoreservar">
                             <h2>Las visitas son los días Sábados a las 15 horas solo reservando por wassap.Duran
                                 aproximádamente una hora y media.
@@ -55,14 +58,14 @@
                                 height="64" alt="Whatsapp"
                                 onclick="window.location.href='https://wa.me/5491136149927?text=Hola!%20Estoy%20interesado%20en%20tu%20servicio'">
                         </div>
-                    </div>
+                    </li>
                 </ul>
             </li>
             <li class="casillasubmenu">
                 <a>Cómo llegar</a>
 
                 <ul class="submenu">
-                    <div class="comollegar">
+                    <li class="comollegar">
                         <li class="textomapa">
                             <h2>A solo 200 metros de la est. Santos Lugares,
                                 colectivos 161 y 105.
@@ -77,7 +80,7 @@
                                 ></iframe>
 
                         </li>
-                    </div>
+                    </li>
                 </ul>
             </li>
             <li>
@@ -91,10 +94,9 @@
             </li>
             <li><a href="eventos.html">Eventos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
-            <li><a href="">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
         </ul>
     </nav>
-
 <div class="exito">
     <li>
     <H1> Nos comunicaremos a la brevedad, ¡muchas gracias!</H1>
