--- a/eventos.html
+++ b/eventos.html
@@ -5,9 +5,12 @@
 <head>
 
     <meta charset="UTF-8">
-    <meta name="description" content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumabas en santos lugares ">
+    <meta name="description" content="Visitas guiadas por sus nietos a la casona del escritor de sobre heroes y tumbas en santos lugares ">
     <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="enkg"/>
+
+    <meta name="copyright" content="Propietario del copyright" />
     <title>Casa Museo Ernesto Sabato visitas guiadas por sus nietos, rerervar acá</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -94,7 +97,6 @@
             <li><a href="index.html">Inicio</a></li>
         </ul>
     </nav>
-
     <div class="titulo"> <h1>La Casa Museo de Ernesto Sabato</h1></div>
     <div class="textoeventos">
         <H2> La casa realiza eventos en los patios y jardines de la casa, para darle lugar a artistas emergentes y a
