--- a/contacto.html
+++ b/contacto.html
@@ -9,12 +9,15 @@
     <meta name="keywords" content="paseos cultura sobre heroes y tumbas el tunel abbadon el exterminador">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="enkg"/>
+    <meta property="og:site_name" content="Casa Museo Ernesto Sabato" />
+    <meta property="og:video" content="Casa de Sabato.mp4"/>
 
     <meta name="copyright" content="Propietario del copyright" />
     <title>Casa Museo Ernesto Sabato visitas guiadas por sus nietos, rerervar acá</title>
     <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
         <!-- Google tag (gtag.js) -->
+        <link rel=“canonical” href=”http://casadesabato.com/index”/>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LE6VKZR6N8"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -48,8 +51,8 @@
                 <ul class="submenu">
                     <li class="reservar">
                         <div class="textoreservar">
-                            <h2>Las visitas son los días Sábados a las 15 horas solo reservando por wassap.Duran
-                                aproximádamente una hora y media.
+                            <h2>Las visitas son los días Sábados a las 15 horas solo reservando por wassap. Duran
+                                aproximádamente una hora y media. 
                                 Para grupos o visitas especiales coordinar via wassap 11 3614 9927 o 11 6167 7626.</h2>
                         </div>
                         <div class="telefono"> <img src="img/telefono.jpg" alt="telefono" loading="lazy"></div>
@@ -62,7 +65,7 @@
                 </ul>
             </li>
             <li class="casillasubmenu">
-                <a>Cómo llegar</a>
+                <a href="https://goo.gl/maps/V66CdTaGWAhJLNzG8">Cómo llegar</a>
 
                 <ul class="submenu">
                     <li class="comollegar">
